--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,7 @@
   <title>My Test Page</title>
  </head>
  <body>
-     Hello Sonali.......
+   <h1>  Hello Sonali....... </h1>
+   <p>testing page....</p>
  </body>
 </html>
