--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
   <title>My Test Page</title>
  </head>
  <body>
-   <h1>  Hello Sonali....... </h1>
+   <h1>  Hello Sonali.hi...... </h1>
    <p>testing page....</p>
  </body>
 </html>
